# my_dev_projects

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: terraform.yml
api_projects/nlp_text_summarization_api/: README.md  main.py
blockchain_protocols/: Summary of Implemented Blockchain Features.txt
blockchain_protocols/rust_cross_chain_atomic_bridge/: Cargo.toml  README.md
blockchain_protocols/rust_decentralized_voting/: Cargo.toml  README.md
blockchain_protocols/rust_defi_lending_protocol/: Cargo.toml  README.md
blockchain_protocols/rust_ink_counter/: Cargo.toml
blockchain_protocols/rust_ink_counter/src/: lib.rs
blockchain_protocols/rust_poa_zkp_voting/: Cargo.toml  Example INFOSEC Project Plan - Rust PoA-ZKP Voting Protocol.docx  Example INFOSEC Project Plan - Rust PoA-ZKP Voting Protocol.md  README.md
blockchain_protocols/rust_quadratic_voting/: Cargo.toml  README.md
data_engineering_projects/: data_engineering_projects.sln
data_engineering_projects/sales_data_etl_ssis/: README.md  SalesDataETL.dtsx  create_sales_data.py  sales_data_etl_ssis.database  sales_data_etl_ssis.dtproj
ml_expert_portfolio/image_captioning_cnn_rnn_tpu/: .gitignore  Image Captioning CNN RNN with TensorFlow and TPU Acceleration in Colab Code.txt  README.md  cnn_encoder.py  data_preprocessing.py  evaluate.py  model.py  requirements.txt  train.py
ml_expert_portfolio/image_classification/: README.md
ml_expert_portfolio/predictive_maintenance/: README.md  requirements.txt
network_security_projects/: my-ec2-key.pem
(+27 files in other folders)
