[package]
name = "rust_ink_counter"
version = "0.1.0"
authors = ["Logan M. Dixon <lmdixon23@gmail.com>"]
edition = "2021"

[dependencies]
ink_lang = { git = "https://github.com/paritytech/ink", branch = "master", default-features = false }
ink_storage = { git = "https://github.com/paritytech/ink", branch = "master", default-features = false }
ink_env = { git = "https://github.com/paritytech/ink", branch = "master", default-features = false }

[dev-dependencies]
ink_e2e = { git = "https://github.com/paritytech/ink", branch = "master" }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink_lang/std",
    "ink_storage/std",
    "ink_env/std"
]
ink-as-dependency = []
e2e-tests = []